fix: Port fix for loading large conduit networks from 1.20.1